--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 .App {
   text-align: center;
 }
+.btnRandM {
+  margin-left: 8px;
+  background-color: #61dafb;
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
+} 
+
 
 .App-logo {
   height: 40vmin;
